--- a/src/DDS.WebAPI/DDS.WebAPI.csproj
+++ b/src/DDS.WebAPI/DDS.WebAPI.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\DDS.Domain.Core\src\DDS.Domain.Core\DDS.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
